# textslabs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  justfile  test.jpg~
.claude/: settings.local.json
.github/workflows/: docs.yml
examples/: accesibility.rs  accessibility.rs  atlas.rs  basic.rs  benchmark.rs  custom_font.rs  declarative.rs  depth.rs  depth_test.rs  event_loop_correct.rs  event_loop_easy.rs  event_loop_manual.rs  event_loop_smart.rs  event_result.rs  full.rs  hello_world.rs  megashader.rs  megashader.wgsl  megashader_primitives.rs  minimal.rs  multi_box_selection.rs  multi_window.rs  occlusion.rs  rotation.rs  shader.wgsl  smart_event_loop.rs  vello_hybrid.rs  z_range.rs
examples/megashader/: megashader.rs  megashader.wgsl
slangc_output/: text.frag.spv  text.vert.spv
src/: accessibility.rs  gpu_slab.rs  lib.rs  push_constants.wgsl  render_data.rs  setup.rs  shader.wgsl  swash_render.rs  text.rs  text.slang  text_box.rs  text_edit.rs  text_renderer.rs  textslabs.slang  wgpu_vomit.rs  z_range_filter.wgsl
src/shaders/: keru_text.slang  shader.slang  textslabs.slang
