[package]
name = "textslabs"
version = "0.1.0"
edition = "2024"

[features]
default = []
panic_on_handle_drop = []
accessibility = ["dep:accesskit", "dep:accesskit_winit", "parley/accesskit"]
vello_hybrid = ["dep:vello_hybrid", "dep:vello_common"]

[profile.dev]
opt-level = 1
strip = "debuginfo"
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# parley = { git = "https://github.com/linebender/parley", rev = "93a2faa" }
parley = { path = "../../../clones/parley/parley" }
# parley = { git = "https://github.com/kekelp/parley", rev = "c4b6da8" }
# parley = "0.6.0"
wgpu = { version = "27", default-features = true, features = ["spirv"] }
etagere = "0.2.10"
lru = { version = "0.12.1", default-features = false }
rustc-hash = "2.0"
swash = "0.2.2"
image = "0.25.6"
bytemuck = "1.23.0"
winit = "0.30.9"
lazy_static = "1.5.0"
accesskit = { version = "0.21.0", optional = true }
accesskit_winit = { version = "0.29.0", optional = true }
peniko = "0.4.0"
arboard = "3.5.0"
slotmap = "1.0"
smallvec = "1.13"
# vello_hybrid = { version = "0.0.4", optional = true }
# vello_common = { version = "0.0.4", optional = true }
vello_hybrid = { git = "https://github.com/linebender/vello", optional = true }
vello_common = { git = "https://github.com/linebender/vello", optional = true }


[dev-dependencies]
pollster = "0.4.0"

[[example]]
name = "accessibility"
path = "examples/accessibility.rs"
required-features = ["accessibility"]

[[example]]
name = "vello_hybrid"
path = "examples/vello_hybrid.rs"
required-features = ["vello_hybrid"]
