[package]
name = "keru_text"
version = "0.1.0"
edition = "2024"

[features]
default = []
panic_on_handle_drop = []
accessibility = ["dep:accesskit", "dep:accesskit_winit", "parley/accesskit"]

[profile.dev]
opt-level = 1
strip = "debuginfo"
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# Enable the fontconfig-dlopen feature so that the library can be built without system dependencies.
parley = { git = "https://github.com/kekelp/parley", features = ["fontconfig-dlopen"] }
wgpu = { version = "27", default-features = true, features = ["spirv"] }
etagere = "0.2.10"
lru = { version = "0.12.1", default-features = false }
rustc-hash = "2.0"
swash = "0.2.2"
image = "0.25.6"
bytemuck = "1.23.0"
euclid = { version = "0.22", features = ["bytemuck"] }
winit = "0.30.9"
lazy_static = "1.5.0"
accesskit = { version = "0.21.0", optional = true }
accesskit_winit = { version = "0.29.0", optional = true }
peniko = "0.4.0"
arboard = "3.5.0"
slotmap = "1.0"
smallvec = "1.13"
ahash = "0.8.12"

[dev-dependencies]
pollster = "0.4.0"
wgpu-profiler = "0.25.0"
winit = "0.30.9"

[[example]]
name = "accessibility"
path = "examples/accessibility.rs"
required-features = ["accessibility"]
